// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-AxjAm XKurW"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-AxjAm iKJFeB"
>
  foo
</button>
`;
